# pricetracker

./: .gitignore  Dockerfile  README.md  d.py  db.sqlite3  docker-compose.yml  pyproject.toml  requirements.txt
alertsmanagementserv/: apps.py  models.py  serializers.py  tasks.py  urls.py  views.py
alertsmanagementserv/management/commands/: run_websocket_client.py  schedule_monitoring.py
alertsmanagementserv/migrations/: 0001_initial.py
core/: .env  celery.py  settings.py  urls.py
identitymanagementserv/: apps.py  serializers.py  signals.py  views.py
